Fix warning in Java.